2001-10-10  Gerd Moellmann  <gerd@gnu.org>

	* s/osf5-0.h (C_SWITCH_SYSTEM) [!__GNUC__]: Add `-nointrinsics'
	options.  From Dave Love <d.love@dl.ac.uk>.

2001-10-09  Gerd Moellmann  <gerd@gnu.org>

	* regex.c (WIDE_CHAR_SUPPORT): Do not use defined() in macro.
	From Hallvard B Furuseth <h.b.furuseth@usit.uio.no>.

	* editfns.c (Fcurrent_time_zone): Cast isalnum() argument to
	unsigned char.
	From Hallvard B Furuseth <h.b.furuseth@usit.uio.no>.
	
2001-10-08  Andrew Innes  <andrewi@gnu.org>

	* lisp.h [max]: Undef min and max before redefining them.

	* w32gui.h: Do not undef min and max.

	* w32heap.h: Do not undef min and max.

	* s/ms-w32.h: Do not undef min and max.

2001-10-08  Stefan Monnier  <monnier@cs.yale.edu>

	* xdisp.c (handle_fontified_prop): Don't bind after-change-functions.

2001-10-08  Sam Steingold  <sds@gnu.org>

	* keymap.c (current-active-maps): Quote newlines (compilation error).

2001-10-08  Eli Zaretskii  <eliz@is.elta.co.il>

	* Makefile.in (lisp, shortlisp): Replace bindings.el with
	bindings.elc, since otherwise doc strings in bindings.el get wrong
	offsets in etc/DOC.

2001-10-08  Stefan Monnier  <monnier@cs.yale.edu>

	* lisp.h: Remove the entries for keymap.c (moved to keymap.h).

	* keyboard.h (map_prompt): Remove.

	* xterm.c, w32term.c, term.c, minibuf.c, keymap.c,
	* intervals.c, fns.c, doc.c, callint.c: Include keymap.h.

	* xmenu.c (keymap_panes, Fx_popup_menu): Use Fkeymap_prompt.

	* w32menu.c (keymap_panes, Fx_popup_menu): Use Fkeymap_prompt.

	* keyboard.c (map_prompt): Remove.
	(read_char_x_menu_prompt, read_char_minibuf_menu_prompt):
	Use Fkeymap_prompt.

	* keymap.h: New file.  Extracted from lisp.h.

	* keymap.c (Fkeymap_prompt, Fcurrent_active_maps): New funs.
	(accessible_keymaps_1): New function.
	(Faccessible_keymaps, accessible_keymaps_char_table): Use it.
	(Fwhere_is_internal): Use Fcurrent_active_maps.
	(Fdescribe_buffer_bindings): Renamed from describe_buffer_bindings.